cargo-features = ["trim-paths", "codegen-backend"]
[package]
name = "csv_query"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.48", default-features = false }
datafusion = { version = "51.0.0", default-features = false, features = [
    "sql",
] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "io-std"] }
tracing = { version = "0.1.43", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
] }
tracing-appender = { version = "0.2.4", default-features = false }
rfd = { version = "0.16.0", default-features = false, features = ["tokio"] }
anyhow = "1.0.100"

[profile.dev]
codegen-backend = "cranelift"
debug = 0
panic = "abort"
strip = true

[profile.dev.package."*"]
debug = 0
strip = true

[profile.release.package."*"]
debug = 0
strip = true

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = true
trim-paths = "all"
