cargo-features = ["trim-paths", "codegen-backend"]
[package]
name = "csv_query"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.48", default-features = false }
datafusion = { version = "52.0.0", default-features = false, features = [
    "sql",
] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-std"] }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
] }
tracing-appender = { version = "0.2.4", default-features = false }
rfd = { version = "0.17.2", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
arrow = { version = "57.2.0", default-features = false }
rayon = "1.11.0"

[profile.dev]
codegen-backend = "cranelift"
debug = 0
panic = "abort"
strip = true

[profile.dev.package."*"]
debug = 0
strip = true

[profile.release.package."*"]
debug = 0
strip = true

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = true
trim-paths = "all"
